# printServer

./: Cargo.toml  README.md  apps.db  build.rs
.github/workflows/: release.yml
debian/: postinst  prerm  start_axum.vbs  web-rust-print.service  web-rust-print.service.in  启动脚本vbs.7z
src/: config.rs  lib.rs  logger.rs  main.rs
src/db/: mod.rs  models.rs  queue.rs  user.rs
src/error/: autherror.rs  httperror.rs  mod.rs
src/hander/: index.rs  mod.rs  upload.rs
src/hander/api/: auth.rs  auth_middleware.rs  mod.rs  print.rs  qrcode.rs  setting.rs
src/jwt/: mod.rs
src/router/: api.rs  index.rs  mod.rs
src/utils/: filezise.rs  ip.rs  mod.rs  path_utils.rs  qr.rs
src/utils/print/: mod.rs
ui/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
ui/src/: App.vue  main.css  main.js
ui/src/api/: api.js  auth.js
ui/src/router/: index.js
ui/src/stores/: user.js
ui/src/utils/: formatDate.js  request.js
ui/src/views/: Admin.vue  Admin.vue.bak  Dashboard.vue  History.vue  LoginPage.vue  NotFound.vue  RegisterPage.vue  UploadPage.vue
wix/: main.wxs
