[package]
name = "psr"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.4", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["multipart"] }
rust-embed = { version = "8.7.2", features = ["axum", "debug-embed","include-exclude"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
mime_guess = "2.0.5"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "derive", "macros", "time", "uuid","sqlite"] }
tower-http = { version = "0.6.6", features = ["fs", "trace","cors"] }
qrcode = "0.14.1"
clap = { version = "4.5.53", features = ["derive"] }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter", "json"] }
tracing = "0.1.43"
toml = "0.9.8"
dirs = "6.0.0"
time = { version = "0.3.44", features = ["local-offset", "serde", "formatting"] }
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
if-addrs = "0.14.0"
image = "0.25.9"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs", "rsa"] }
bcrypt = "0.17.1"
base64 = "0.22.1"
cookie = "0.18.1"
uuid = { version = "1.19.0", features = ["v4"] }
futures-core = "0.3.31"
lazy_static = "1.5.0"
